Release 0.2.3 summary job controls
